<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TcpConfig"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelURL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/url"
            android:textSize="20sp" />

        <EditText
        android:id="@+id/inputURL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.40"
        android:ems="10"
        android:hint="@string/enter_url"
        android:inputType="textUri"
        android:text="@string/_10_0_2_2" />

        <EditText
            android:id="@+id/inputPort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:ems="10"
            android:hint="@string/enter_url"
            android:inputType="number"
            android:text="@string/_123"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="connectButton"
            android:text="@string/connect" />

        <Button
            android:id="@+id/connectTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="connectTab"
            android:text="@string/connect_tab" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:layout_marginLeft="20dp"
            android:id="@+id/alignRight"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/rpm_align_right"
            android:layout_marginStart="20dp" />

        <ImageView
            android:paddingLeft="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/opends"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</LinearLayout>